--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,3 +2,6 @@ Django>=5.0,<6.0
 djangorestframework>=3.15
 djangorestframework-simplejwt>=5.3
 django-cors-headers>=4.3
+google-auth
+requests
+python-dotenv
